# dead-link-checker

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  LICENCE  README.md  cli.py  config.examples.yaml  config.yaml  dead_link_checker.py  gunicorn.conf.py  package-lock.json  pyproject.toml  railway.toml  requirements.txt  run  run_all  run_backend  run_frontend  wsgi.py
.github/workflows/: lint-and-test.yml  railway-deploy.yml
app/: __init__.py
app/api/: __init__.py  routes.py
app/core/: __init__.py  config.py  config_store.py  crawler.py  jobs.py
custom_config/: .gitkeep  README.md  config.examples.yaml
custom_config_json/: README.md  example.json
docs/plan/: step_3_plan.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Button.tsx  ConfigModal.tsx  FormField.tsx  Layout.tsx
frontend/src/pages/: Configs.tsx  Dashboard.tsx  ReportDetail.tsx  Reports.tsx
