[project]
name = "dead-link-crawler"
version = "0.1.0"
description = "Python web crawler for detecting dead links on websites"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "colorama>=0.4.6",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "gunicorn>=21.2.0",
    "click>=8.1.0",
]
